cktmp/package-interval_sane/build-test_interval/log
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -S/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source -B/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived --check-build-system CMakeFiles/Makefile.cmake 0
/usr/bin/gmake  -f CMakeFiles/Makefile2 test_interval
gmake[1]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -S/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source -B/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived --check-build-system CMakeFiles/Makefile.cmake 0
/home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_progress_start /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived/CMakeFiles 2
/usr/bin/gmake  -f CMakeFiles/Makefile2 CMakeFiles/test_interval.dir/all
gmake[2]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
/usr/bin/gmake  -f CMakeFiles/test_interval.dir/build.make CMakeFiles/test_interval.dir/depend
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
cd /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived && /home/frodo/public/ugls_lab-4.0.70/packages/cmake-3.17.1/bin/cmake -E cmake_depends "Unix Makefiles" /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived/CMakeFiles/test_interval.dir/DependInfo.cmake --color=
Scanning dependencies of target test_interval
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
/usr/bin/gmake  -f CMakeFiles/test_interval.dir/build.make CMakeFiles/test_interval.dir/build
gmake[3]: Entering directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
[ 50%] Building CXX object CMakeFiles/test_interval.dir/app/test_interval.cpp.o
/home/frodo/public/ugls_lab-4.0.70/bin/c++   -I/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source/include  -pedantic-errors -frounding-math -std=gnu++17 -o CMakeFiles/test_interval.dir/app/test_interval.cpp.o -c /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source/app/test_interval.cpp
In file included from /home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source/app/test_interval.cpp:4:
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source/include/ra/interval.hpp:116:73: error: C++ designated initializers only available with ‘-std=c++2a’ or ‘-std=gnu++2a’ [-Wpedantic]
  116 |  typename interval<real_type>::statistics interval<real_type>::stat_ = {.indeterminate_result_count = 0, .arithmetic_op_count = 0};
      |                                                                         ^
/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/source/include/ra/interval.hpp:116:106: error: C++ designated initializers only available with ‘-std=c++2a’ or ‘-std=gnu++2a’ [-Wpedantic]
  116 |  typename interval<real_type>::statistics interval<real_type>::stat_ = {.indeterminate_result_count = 0, .arithmetic_op_count = 0};
      |                                                                                                          ^
gmake[3]: *** [CMakeFiles/test_interval.dir/app/test_interval.cpp.o] Error 1
gmake[3]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
gmake[2]: *** [CMakeFiles/test_interval.dir/all] Error 2
gmake[2]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
gmake[1]: *** [CMakeFiles/test_interval.dir/rule] Error 2
gmake[1]: Leaving directory `/home/judeonyia/Documents/ECE596C_Assignments/ECE596C_Assgn_3/cpp_arithmetic-JudeOnyia/cktmp/package-interval_sane/derived'
gmake: *** [test_interval] Error 2
ERROR: build failed to generate executable test_interval
